crates/vexor-compiler/tests/golden/error/input/stroke_arity.vx
let c = Circle(10)
// too few arguments
let stroked = stroke(2.0, c)
export stroked
